force-app/main/default/objects/Opportunity/fields/Sharepoint_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>Sharepoint_Folder_Id__c</fullName>
    <externalId>true</externalId>
    <label>Sharepoint Folder Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>