force-app/main/default/objects/Opportunity/fields/Stage_Status__c.field-meta.xml
<CustomField>
    <fullName>Stage_Status__c</fullName>
    <label>Stage Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Put on Hold</fullName>
            </value>
            <value>
                <fullName>Further Analysis/Negotiation</fullName>
            </value>
            <value>
                <fullName>Looks Good</fullName>
                <isActive>false</isActive>
                <label>Looks Good</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>