force-app/main/default/objects/Opportunity/fields/Stage_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Stage_Timestamp__c</fullName>
    <label>Stage Timestamp</label>
    <type>Date</type>
</CustomField>