force-app/main/default/objects/Opportunity/fields/Starting_Draw_Reserve__c.field-meta.xml
<CustomField>
    <fullName>Starting_Draw_Reserve__c</fullName>
    <label>Starting Draw Reserve</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>