force-app/main/default/objects/Opportunity/fields/Status_Flag__c.field-meta.xml
<CustomField>
    <fullName>Status_Flag__c</fullName>
    <formula>IF(
ISPICKVAL( Stage_Status__c , &quot;Put on Hold&quot;),
IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;Red&quot;),
IF(ISPICKVAL( Stage_Status__c , &quot;Further Analysis/Negotiation&quot;),
IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;Yellow&quot;),
IF(ISPICKVAL(Stage_Status__c, &quot;Looks Good&quot;), IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;Green&quot;),&quot;&quot;
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Flag</label>
    <type>Text</type>
</CustomField>