force-app/main/default/objects/Opportunity/fields/Total_Score_from_Scorecard__c.field-meta.xml
<CustomField>
    <fullName>Total_Score_from_Scorecard__c</fullName>
    <label>Total Score from Scorecard</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>