force-app/main/default/objects/Opportunity/listViews/FUNUW__Default_Opportunity_Pipeline.listView-meta.xml
<ListView>
    <fullName>FUNUW__Default_Opportunity_Pipeline</fullName>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_MONTHS:3</value>
    </filters>
    <label>Opportunity Pipeline</label>
</ListView>