force-app/main/default/objects/Opportunity/listViews/Neglected.listView-meta.xml
<ListView>
    <fullName>Neglected</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.LAST_ACTIVITY</field>
        <operation>greaterThan</operation>
        <value>LAST_WEEK</value>
    </filters>
    <label>Neglected</label>
</ListView>