force-app/main/default/objects/Opportunity/listViews/Stalled.listView-meta.xml
<ListView>
    <fullName>Stalled</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Days_in_Underwriting__c</field>
        <operation>greaterThan</operation>
        <value>15</value>
    </filters>
    <label>Stalled</label>
</ListView>